--- a/ProudBlack/Areas/Admin/Views/AdminGrafico/VendasMensal.cshtml
+++ b/ProudBlack/Areas/Admin/Views/AdminGrafico/VendasMensal.cshtml
@@ -1,20 +1,19 @@
 ﻿<title>
     @ViewData["Title"] - Grafico de Vendas
 </title>
-
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
-<div id="chart_div" style="width:900px; height:500px;"></div>
+<div id="chart_div" style="width: 900px; height: 500px;"></div>
 
 <script type="text/javascript">
-
     google.charts.load('current', { packages: ['corechart', 'bar'] });
-    google.charts.setOnLoadCallback(CarregarDados);
+    google.charts.setOnLoadCallback(CarregaDados);
 
-    function CarregarDados() {
+    //obter os dados
+    function CarregaDados() {
         $.ajax({
             url: '@Url.Action("VendasProdutos", "AdminGrafico")',
-            data: { dias: 360 },
+            data: { dias: 30 },
             dataType: "json",
             type: "GET",
             error: function (xhr, status, error) {
@@ -22,36 +21,43 @@
                 toastr.error(err.message);
             },
             success: function (data) {
-                GraficoVendasLanches(data);
+                GraficoVendasProdutos(data);
                 return false;
             }
         });
         return false;
     }
-
-    function GraficoVendasLanches(data) {
+    function GraficoVendasProdutos(data) {
         var dataArray = [
             ['Produto', 'Quantidade', 'Valores(R$)']
         ];
         $.each(data, function (i, item) {
-            dataArray.push([item.produtoNome, item.produtoQuantidade, item.produtosValorTotal])
+            dataArray.push([item.produtoNome, item.produtoQuantidade, item.produtosValorTotal]);
         });
         var data = google.visualization.arrayToDataTable(dataArray);
         var options = {
-            title: 'Produtos - Vendas nos últimos 360 dias',
+            title: 'Produtos - Vendas últimos 30 dias',
+
+            animation: {
+                duration: 3000,
+                easing: 'out',
+                startup: true
+            },
+
             chartArea: {
                 width: '70%'
             },
             colors: ['#5202b5', '#d2a828'],
             hAxis: {
-                title: 'Valor Total (Reais)',
+                title: 'Produtos',
                 minValue: 0
             },
             vAxis: {
-                title: 'Produtos'
+                title: 'Valor Total (em Reais)'
             }
         };
-        var chart = new google.visualization.BarChart(document.getElementById('chart_div'));
+        //preparar a visualização e defino o tipo de grafico e o local
+        var chart = new google.visualization.ColumnChart(document.getElementById('chart_div'));
         chart.draw(data, options);
     }
 </script>
