--- a/ProudBlack/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ProudBlack/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-color:#212529;">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -44,16 +44,13 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
+        <main style="flex-grow: 1" role="main" class="pb-3">
             @RenderBody()
         </main>
-    </div>
+    </div>>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - ProudBlack - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
+    <partial name="_Footer" />
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
